<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_batch_manage"
        android:title="@string/menu_batch_manage" />
    <item
        android:id="@+id/menu_plan_task"
        android:title="@string/menu_plan_task" />
    <item
        android:id="@+id/menu_smart_assistant"
        android:title="@string/menu_smart_assistant" />
    <item
        android:id="@+id/menu_backup"
        android:title="@string/menu_backup" />
    <item
        android:id="@+id/menu_privacy_policy"
        android:checkable="false"
        android:title="@string/menu_privacy_policy" />
    <item
        android:id="@+id/menu_user_agreement"
        android:checkable="false"
        android:title="@string/menu_user_agreement" />
    <item
        android:id="@+id/menu_update_version"
        android:checkable="false"
        android:title="@string/menu_update_version" />
</menu>
